# departic

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  departic.example.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
src/departic/: __init__.py  __main__.py  cache.py  cache_test.py  config.py  conftest.py  controller.py  controller_test.py  evcc.py  evcc_test.py  http_session.py  ical.py  ical_test.py  main.py  models.py  notifier.py  notifier_test.py  routing.py  routing_test.py  scheduler.py  scheduler_test.py  state.py  state_test.py  status_builder.py  status_builder_test.py  tick.py  tick_test.py
src/departic/web/: router.py  router_test.py
src/departic/web/static/: departic.css  departic.js
src/departic/web/templates/: index.html
